fixed image distortion

--- a/sass/partials/_body.scss
+++ b/sass/partials/_body.scss
@@ -23,7 +23,7 @@
 
 .images {
     width: 100%;
-    height: 400px;
+    height: auto;
 }
 
 .abstract {
